--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.1",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2"
+  },
+  "devDependencies": {
+    "beeper": "^1.1.0"
   }
 }
