--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   },
   "homepage": "https://github.com/psullivan6/playground",
   "dependencies": {
-    "del": "^2.0.1",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2"
+    "gulp-cssnano": "^2.1.1",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0"
   },
   "devDependencies": {
-    "beeper": "^1.1.0"
+    "beeper": "^1.1.0",
+    "gulp-hb": "^4.0.3"
   }
 }
