--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.1",
     "gulp-file-include": "^0.13.7",
-    "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.4.1"
+    "gulp-uglify": "^1.4.1",
+    "run-sequence": "^1.1.5"
   },
   "devDependencies": {
-    "beeper": "^1.1.0",
     "cache-require-paths": "^0.1.2",
+    "colors": "psullivan6/colors.js",
+    "express": "^4.13.4",
     "gulp-util": "^3.0.6",
     "require-dir": "^0.3.0"
   }
