--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@ npm-debug.log
 # Compiled Files
 release
 .cache-require-paths.json
-
 _source/css/*.css
 _source/*.html
 release
+
+# Credentials
+aws-credentials.json
