--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
+    "gulp-awspublish": "^3.0.1",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
     "gulp-file-include": "^0.13.7",
@@ -28,13 +29,13 @@
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.7",
+    "merge-stream": "^1.0.0",
+    "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5"
   },
   "devDependencies": {
     "cache-require-paths": "^0.1.2",
-    "colors": "psullivan6/colors.js",
-    "express": "^4.13.4",
-    "gulp-util": "^3.0.6",
-    "require-dir": "^0.3.0"
+    "colors": "psullivan6/colors.js"
   }
 }
