--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2"
+    "gulp-sourcemaps": "^1.5.2",
+    "requirejs": "^2.2.0"
   },
   "devDependencies": {
     "beeper": "^1.1.0"
