--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-cssnano": "^2.1.1",
     "gulp-file-include": "^0.13.7",
     "gulp-pug": "^2.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
