--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "express": "^4.13.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
-    "gulp-awspublish": "^3.0.1",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
     "gulp-file-include": "^0.13.7",
     "gulp-pug": "^2.0.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-surge": "^0.1.0",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.7",
     "merge-stream": "^1.0.0",
